--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,6 @@
     <title>Practice Assessment 3</title>
 </head>
 <body>
-    <iframe src="./Practice Assessment 1.html" width="500" height="500"></iframe> <a href="./prac3.html">click here to see video</a>
+    <iframe src="./index.html" width="500" height="500"></iframe> <a href="./prac3.html">click here to see video</a>
 </body>
 </html>
