--- a/css2.html
+++ b/css2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS 2</title>
-    <link rel="stylesheet" href="css2.css">
+    <link rel="stylesheet" href="assessment2.css">
 </head>
 <body>
     <i><div class="box">Welcome to Dhaba Restaurant <br> you get quality food here</div>
